# service-health-guardian

./: .gitignore  README.md  command-line-interface.sh  get-service-details.sh  pyproject.toml  tox.ini  view.sh
.github/workflows/: ci.yml
config/: guardian.yaml
docs/: development-process.md  distribution.md  future-extensions.md  in-depth-features.md  other-tools.md  python-libraries.md
scripts/: code-quality-life-cycle.sh  code-quality-lifecycle.sh  get-service-details.sh  log-aggregation.sh  poetry-lifecycle.sh  setup-config.sh  shell-solution.sh  view.sh
src/: __init__.py  actions.py  cli.py  config.py  core.py  metrics.py
systemd/: service-guardian.service
tests/: conftest.py  test_config.py  test_core.py
