[tool.poetry]
name = "service-health-guardian"
version = "0.1.0"
description = "A systemd service monitoring and management tool"
authors = ["Joel Mattsson joel.mattsson@hotmail.se"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^7.2"}
black = "^24.1.1"
ruff = "^0.2.1"
pytest = "^7.0.0"
pytest-cov = "^4.1.0"
types-PyYAML = "^6.0.0"
tox = "^4.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
service-health-guardian = "src.cli:main"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py38"]
preview = true

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # pylint
    "RUF", # ruff specific
    "PTH", # use pathlib
    "C4",  # comprehensions
    "B",   # bugbear
    "A",   # builtins
    "COM", # trailing comma
    "T20", # print statements
]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.mccabe]
max-complexity = 10 